# ILN-Smart-Contract

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DUTCH_AUCTION_IMPLEMENTATION.md  IMPLEMENTATION_SUMMARY.md  MULTISIG_IMPLEMENTATION.md  Makefile  PULL_REQUEST.md  README.md  SECURITY.md  cliff.toml  deny.toml  docker-compose.yml
contracts/fuzz/: Cargo.toml
contracts/fuzz/src/: lib.rs
contracts/fuzz/test_snapshots/tests/: prop_submit_invoice_never_panics.986.json
contracts/invoice_liquidity/: Cargo.toml
contracts/invoice_liquidity/benchmarks/: baseline.json
contracts/invoice_liquidity/src/: access.rs  config.rs  constants.rs  errors.rs  events.rs  invoice.rs  lib.rs  multisig.rs  nft.rs  oracle_interface.rs  rate_logic.rs  storage.rs  test.rs  tests_access_control.rs  tests_appeal.rs  tests_auth.rs  tests_benchmarks.rs  tests_concurrency.rs  tests_counter.rs  tests_discount_invariants.rs  tests_discount_rate.rs  tests_dispute.rs  tests_distribution.rs  tests_dutch_auction.rs  tests_fuzz.rs  tests_governance_features.rs  tests_invariants.rs  tests_invoice_nft.rs  tests_invoice_paid_event.rs  tests_lazy_storage.rs  tests_lifecycle_integration.rs  tests_lp_funding_details_event.rs  tests_lp_pagination.rs  tests_lp_portfolio_stats.rs  tests_lp_priority_queue.rs  tests_lp_whitelist.rs  tests_min_invoice_amount.rs  tests_multi_token.rs  tests_multisig_admin.rs  tests_mutation.rs  (+21 more)
contracts/invoice_liquidity/test_snapshots/: cannot_cancel_funded_invoice.1.json  freelancer_can_cancel_pending.1.json  non_freelancer_cannot_cancel.1.json  test_governance_setters_and_access_control.1.json  test_integration_fund_removed_token_fails.1.json  test_integration_lifecycle_eurc.1.json  test_integration_lifecycle_usdc.1.json  test_integration_lifecycle_xlm.1.json  test_integration_submit_unapproved_token_fails.1.json
contracts/invoice_liquidity/test_snapshots/test/: test_claim_default_before_due_date_fails.1.json  test_claim_default_non_funder_fails.1.json  test_claim_default_on_paid_invoice_fails.1.json  test_claim_default_success.1.json  test_claim_default_twice_fails.1.json  (+29 more)
contracts/invoice_liquidity/tests/: cancel_invoice.rs
(+443 files in other folders)
