[workspace]
resolver = "2"
members = [
  "contracts/*",
]

exclude = [
  "contracts/tests"
]

[workspace.dependencies]
soroban-sdk = "21.4.0"
proptest = "1"
rand = "0.10.1"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

# For more information about this profile see https://soroban.stellar.org/docs/basic-tutorials/logging#cargotoml-profile
[profile.release-with-logs]
inherits = "release"
debug-assertions = true
