[package]
name = "invoice_liquidity"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
soroban-sdk = { workspace = true }

[dev-dependencies]
ed25519-dalek = "2.2.0"
iln_governance = { path = "../iln_governance" }
proptest = { workspace = true }
rand = { workspace = true }
serde_json = "1.0.149"
soroban-sdk = { workspace = true, features = ["testutils"] }

[[test]]
name = "multi_token_test"
path = "../tests/multi_token_test.rs"

[[test]]
name = "governance_main_integration_test"
path = "../tests/governance_main_integration_test.rs"

[[test]]
name = "oracle_integration_test"
path = "../tests/oracle_integration_test.rs"

